# fastidious

./: .env  .gitignore  Cargo.toml  Makefile  README.md  noname.toml
.github/workflows/: rust.yml
example/: apply.toml  example1-apply  example1-is-applied
src/: action.rs  apply.rs  applyerr.rs  cmd.rs  configfile.rs  diff.rs  dryrun.rs  dryrunerr.rs  files.rs  filter.rs  fs.rs  lib.rs  main.rs  passive.rs  template.rs  userinput.rs
src/dryrun/: cmd.rs  diff.rs  dryrun.rs  err.rs  filter.rs  fs.rs  mod.rs  properties.rs  template.rs
