[package]
name = "noname"
description = "apply, unapply, dryrun"
version = "0.1.0"
authors = ["Sean McEligot <sean.mceligot@gmail.com>"]

[dependencies]
ansi_term = "*"
seahorse = "*"
config = "*"
dirs = "*"
dotenv = "*"
regex = "1.3.9"
env_logger = "*"
serde = "*"
serde_derive = "*"
getopts = "*"
glob = "*"
temp-file = "*"
rand = "*"
log = "0.4"
simple_logger = "1.6.0"
which = "*"
thiserror = "*"
libc="*"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.0"

#[lib]
#name = "dryrun"
#path = "src/lib.rs"

#[[bin]]
#name = "do"
#path = "src/main.rs"

