[package]
name = "fastidious"
description = "command line apply, unapply, is-applied, dryrun"
version = "0.2.0"
authors = ["Sean McEligot <sean.mceligot@gmail.com>"]

[dependencies]
ansi_term = "*"
seahorse = "*"
config = "*"
dirs = "*"
regex = "1.3.9"
env_logger = "*"
serde = "*"
serde_derive = "*"
getopts = "*"
glob = "*"
temp-file = "*"
rand = "*"
log = "0.4"
simple_logger = "1.6.0"
which = "4.0.2"
thiserror = "*"
libc="*"

[dev-dependencies]
assert_cmd = "1.0.1"

